Fix a crash when setting MediaControlsEnabled setting for videos without controls

There's a crash which is triggered when we set MediaControlsEnabled
setting before the video controls get created. This CL adds null-check
before calling MediaControls::onMediaControlsEnabledChange().

BUG=696645

Review-Url: https://codereview.chromium.org/2722623002
Cr-Commit-Position: refs/heads/master@{#453595}