third_party/WebKit/Source/core/html/HTMLMediaElement.cpp
@@ -382,7 +382,8 @@ void HTMLMediaElement::onMediaControlsEnabledChange(Document* document) {
   WeakMediaElementSet& elements = *it->value;
   for (const auto& element : elements) {
     element->updateControlsVisibility();
-    element->mediaControls()->onMediaControlsEnabledChange();
+    if (element->mediaControls())
+      element->mediaControls()->onMediaControlsEnabledChange();
   }
 }
 
